commit all file

--- a/index.html
+++ b/index.html
@@ -183,13 +183,42 @@
     <!-- YOUR AGENT SECTION START -->
 
     <section class="your-agent-container">
-        <article class="your-agent-image-container">
-            <img src="/assets/your-AgentCharactor.png" alt="">
-        </article>
+      <article class="your-agent-image-container">
+        <img src="/assets/your-AgentCharactor.png" alt="" />
+      </article>
 
-        <article class="your-agent-content">
-            
-        </article>
+      <article class="your-agent-content">
+        <h1>YOUR AGENTS</h1>
+        <div>CREATIVITY IS YOUR GREATEST WEAPON.</div>
+
+        <p>
+          More than guns and bullets, you’ll choose an Agent armed with
+          adaptive, swift, and lethal abilities that create opportunities to let
+          your gunplay shine. No two Agents play alike, just as no two highlight
+          reels will look the same.
+        </p>
+
+        <button>VIWE ALL AGENT</button>
+      </article>
+    </section>
+
+    <!-- YOUR AGENT SECTION ENDS -->
+
+    <section class="your-map-container">
+      <article class="your-map-image-container">
+        <img src="/assets/yourmaps.png" alt="" />
+      </article>
+
+      <article class="your-map-content">
+        <h1>YOUR MAPS</h1>
+        <div>FIGHT AROUND THE WORLD</div>
+        <p>
+          Each map is a playground to showcase your creative thinking.
+          Purpose-built for team strategies, spectacular plays, and clutch
+          moments. Make the play others will imitate for years to come..
+        </p>
+        <button>VIWE ALL MAPS</button>
+      </article>
     </section>
   </body>
 </html>
